--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
 scikit-learn
-pandas==2.1.0
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
+pandas
+numpy
+matplotlib
+seaborn
 joblib==1.3.2
 gunicorn==21.2.0
